--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
           </div>
         </div>
         <div class="footer__bar">
-          Copyright © 2024 Web Design Mastery. All rights reserved.
+          Copyright © 2024 Nagabhushan. All rights reserved.
         </div>
       </footer>
     <script src="https://unpkg.com/scrollreveal"></script>
